# rust_samples

./: Cargo.toml  README.md
src/: lib.rs
src/sample1/: functions.rs  if_loop.rs  mod.rs  primitives.rs  variable.rs  vectors.rs
src/sample2/: borrowing.rs  lifetimes.rs  mod.rs  owner_ship.rs
tests/: integrations.rs
